# SOC-MEA-code

./: .gitignore  CMakeLists.txt  README.md
input/: input.txt
src/: cell_configuration.cpp  cell_configuration.h  dependencies.h  input_reader.cpp  input_reader.h  main.cpp  output_writer.cpp  output_writer.h  root_function.cpp  root_function.h
src/root_sub_function/: root_sub_function.cpp  root_sub_function.h  root_sub_function_3YSZ.cpp  root_sub_function_3YSZ.h  root_sub_function_CGO.cpp  root_sub_function_CGO.h  root_sub_function_CeSSZ.cpp  root_sub_function_CeSSZ.h  root_sub_function_LSCF.cpp  root_sub_function_LSCF.h  root_sub_function_LSM.cpp  root_sub_function_LSM.h  root_sub_function_LSMYSZ.cpp  root_sub_function_LSMYSZ.h  root_sub_function_NiCGO.cpp  root_sub_function_NiCGO.h  root_sub_function_NiYSZ.cpp  root_sub_function_NiYSZ.h  root_sub_function_YSZ.cpp  root_sub_function_YSZ.h  root_sub_function_factory.cpp  root_sub_function_factory.h  root_sub_function_metal_support.cpp  root_sub_function_metal_support.h  root_sub_function_porous.cpp  root_sub_function_porous.h
src_py/: visualization.py
